amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/directive-argument-wrong-value.api.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/directive-argument-wrong-value.api.graphql
Profile: GraphQL
Conforms: false
Number of results: 1

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#invalid-extension-argument-type
  Message: Expecting 'String' value but got 'Boolean' value instead
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/directive-argument-wrong-value.api.graphql#/web-api/customDomainProperties/MyDirective
  Property: http://a.ml/vocabularies/document#customDomainProperties
  Range: [(1,26)-(1,30)]
  Location: 
